[tool.poetry]
name = "raft"
version = "0.1.0"
description = ""
authors = ["Adi Gudimella <adgudime@microsoft.com>"]

[tool.poetry.dependencies]
python = "3.11"
attrs = "22.2.0"
pytest = "7.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
