[tool.poetry]
name = "raft"
version = "0.1.0"
description = ""
authors = ["Adi Gudimella <adgudime@microsoft.com>"]

[tool.poetry.dependencies]
python = "3.11"
attrs = "22.2.0"
pytest = "7.2.1"
structlog = "^22.3.0"
rich = "^13.2.0"
tqdm = "^4.64.1"
pydantic = "^1.10.4"
typer = "^0.7.0"

[tool.poetry.scripts]
raft = "raft.cli:app"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
